# Robotic_arm_ISRO

./: Internship_report_Isro.docx  README.md
Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/launch/: ur_sim_control.launch.py
Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_control.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_moveit_config/share/my_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_nr_motion_control/lib/ros2_nr_motion_control/: cartesian_space_trajectory_node  helix_trajectory_publisher  joint_angle_publisher  joint_sine_publisher  joint_space_trajectory_node
install/ur/share/ur/: package.sh
log/: latest_build
robot_desktop_gui/: package.xml  setup.cfg  setup.py
robot_desktop_gui/robot_desktop_gui/: gui_driver_node.py  gui_node.py  planetary_kinematics_node.py
robot_task_interfaces/: CMakeLists.txt  package.xml
robot_task_interfaces/action/: ExecuteSkill.action
src/Universal_Robots_ROS2_Description/launch/: combined.launch.py  display.launch.py  gazebo.launch.py
src/Universal_Robots_ROS2_Description/urdf/: ur10e.urdf.xacro  ur_macro.xacro
src/my_moveit_config/: .setup_assistant  CMakeLists.txt
src/my_moveit_config/config/: joint_limits.yaml  pilz_planning_pipeline.yaml  servo.yaml  ur10e.ros2_control.xacro  ur10e.srdf  ur10e.urdf.xacro
src/my_moveit_config/launch/: move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
src/path_planner/: package.xml  setup.py
src/path_planner/config/: ur10e_cartesian_simulation.urdf.xacro  ur_controllers.yaml
src/path_planner/launch/: sim_cartesian_control.launch.py
src/path_planner/path_planner/: curve_commander.py
src/ros2_nr_motion_control/: CMakeLists.txt
src/ros2_nr_motion_control/config/: ur10e.urdf.xacro  ur_mock_controllers.yaml
src/ros2_nr_motion_control/launch/: cartesian_space_trajectory.launch.py  helix_control.launch.py  sinusoidal_trajectory.launch.py
src/ros2_nr_motion_control/model/: wall.sdf
src/ros2_nr_motion_control/src/: cartesian_space_trajectory_node.cpp  helix_trajectory_publisher.cpp  joint_angle_publisher.cpp
src/servo_control/: package.xml  setup.py
src/servo_control/servo_control/: cylinder_cleaning_servo.py
src/wrench_bridge/: package.xml  setup.cfg  setup.py
ur10e_force_control/: CMakeLists.txt  package.xml
ur10e_force_control/launch/: admittance_control.launch.py
ur10e_force_control/src/: admittance_control_node.cpp  cartesian_lift_and_reverse_circle_node.cpp  lifecycle_manager_node.cpp  wall_detection_node.cpp
ur10e_force_control_base/: CMakeLists.txt  package.xml
ur10e_force_control_base/include/ur10e_force_control_base/: force_controller.hpp  kinematics_helper.hpp  motion_primitives_base.hpp  robot_state.hpp  wrench_filter.hpp
ur10e_force_control_base/include/ur10e_force_control_base/mapping/: orientation_utils.hpp  trajectory_math.hpp
ur10e_force_control_base/src/: force_controller.cpp  kinematics_helper.cpp  wrench_filter.cpp
ur10e_force_control_base/src/mapping/: orientation_utils.cpp  trajectory_math.cpp
ur10e_force_control_base/src/nodes/: wrench_filter_node.cpp
ur10e_force_control_cylinder/: CMakeLists.txt  package.xml
ur10e_force_control_cylinder/include/ur10e_force_control_cylinder/: robot_state_provider.hpp
ur10e_force_control_cylinder/include/ur10e_force_control_cylinder/primitives/: approach_primitive.hpp  circle_primitive.hpp  helix_primitive.hpp  horizontal_primitive.hpp  retract_primitive.hpp
ur10e_force_control_cylinder/src/: approach_circle_node.cpp  approach_horizontal_node.cpp  approach_node.cpp  circle_follow_node.cpp  robot_state_provider.cpp
ur10e_force_control_cylinder/src/primitives/: approach.cpp  circle.cpp  helix.cpp  horizontal.cpp
ur10e_force_mode_pgk/: CMakeLists.txt  package.xml
ur10e_force_mode_pgk/src/: force_mode_wall_seek_orientation_control.cpp  ur_force_mode_wall_finder.cpp  ur_force_mode_wall_follower.cpp  ur_force_mode_wall_follower_loop.cpp
ur10e_robot_driver/: CMakeLists.txt  package.xml
ur10e_robot_driver/launch/: robot_arm_admittance.launch.py  robot_arm_setup.launch.py
ur10e_robot_driver/src/: action_circle_follow.cpp  action_retract.cpp  action_reverse_circle_follow.cpp  action_task_manager.cpp  lifecycle_manager_node.cpp  scaled_jtc_test.cpp  ur10e_admittance_control_node.cpp  ur10e_cartesian_lift_and_reverse_circle_node.cpp  ur10e_force_retract.cpp  ur10e_helix_retract.cpp  ur10e_straight_line.cpp  ur10e_wall_detection_node.cpp
ur10e_simulation_pkg/: CMakeLists.txt  package.xml
ur10e_simulation_pkg/config/: controllers.yaml
ur10e_simulation_pkg/launch/: robot_sim.launch.py  vertical_mixer_planetary_urdf.launch.py  vertical_mixer_ur10e.launch.py
ur10e_simulation_pkg/model/: bowl.sdf  vertical_mixer_planetary.sdf
ur10e_simulation_pkg/scripts/: planetary_kinematics_node.py
ur10e_simulation_pkg/src/: action_circle_follow.cpp  action_retract.cpp  action_task_manager.cpp  ur10e_circle_follow.cpp  ur10e_st_line.cpp
ur10e_simulation_pkg/urdf/: vertical_mixer_planetary.urdf
ur10e_simulation_pkg/world/: world_new.sdf
ur10e_simulation_pkg/world/bowl_classic/: model.config  model.sdf
ur10e_testing_package/: CMakeLists.txt  package.xml
ur10e_testing_package/include/ur10e_testing_package/: robot_arm_motion_planner.hpp
ur10e_testing_package/launch/: robot_arm_gazebo.launch.py  robot_arm_ptp.launch.py  robotic_arm.launch.py
ur10e_testing_package/model/: bowl.sdf
ur10e_testing_package/src/: force_filtered.cpp  joint_angle_publisher.cpp  ur10e_force_retract.cpp  ur10e_ground_plane.cpp  ur10e_home.cpp  ur10e_stiffness_detection.cpp  ur10e_straight_line.cpp
ur10e_testing_package/urdf/: ur10e.urdf.xacro
ur10e_testing_pkg/: CMakeLists.txt  package.xml
ur10e_testing_pkg/src/: circle_force_server.cpp  reverse_circle_force_server.cpp  task_manager.cpp  ur10e_force_filter.cpp  ur10e_home.cpp
(+301 files in other folders)
